--- a/.github/workflows/deploy2prod.yml
+++ b/.github/workflows/deploy2prod.yml
@@ -48,6 +48,7 @@ jobs:
           script: | # 执行命令（运行到服务器）cd：要确保服务器有这个目录； wget：下载上一步的release到服务器； tar：解压； 安装依赖；启动服务
             cd /root/docker/code/WeCuit
             tar -zxvf dist.tgz
-            rm -rf admin-ui
-            mv dist admin-ui
+            rm -rf admin-ui/*
+            mv dist/* admin-ui
+            rm -rf dist
             rm -f dist.tgz
